feat: add schedule module, fix console warn log
